--- a/semantic/src/theme.config
+++ b/semantic/src/theme.config
@@ -18,11 +18,11 @@
 */
 
 /* Global */
-@site        : 'amazon';
+@site        : 'twitter';
 @reset       : 'default';
 
 /* Elements */
-@button      : 'amazon';
+@button      : 'twitter';
 @container   : 'default';
 @divider     : 'default';
 @flag        : 'default';
